--- a/css/telaNotas/style1366.css
+++ b/css/telaNotas/style1366.css
@@ -1,9 +1,11 @@
 .header {
     display:none;
+    position: absolute;
+    
   }
   
   .logo {
-    position: relative;
+    position: absolute;
     left: calc(100vw - 2em - 8px);
     top: 5px;
     width: 2em;
@@ -18,7 +20,7 @@
   .hamburger{display: none!important;}
   
   .fullnav {
-    width: 280px;
+    width: 60px;
     bottom: 0%;
     top: 0%;
     right: 0;
@@ -27,7 +29,7 @@
   }
   
   .menu {
-    width: 230px;
+    width: 0.1px;
     justify-content: space-around;
     background: #051523;
   }
@@ -39,7 +41,6 @@
     flex-grow: 2;
     align-items: flex-end!important;
     position: relative;
-    right: -57px
   }
   
   .menu-buttons li a{
@@ -65,11 +66,17 @@
     margin: calc(30px + 3vh) 0 30px;
   }
   
-  main {background-color: #f1f1f1; width: 100vw; height: 100vh; }
+  main {background-color: #f1f1f1; width: 100vw; height: 100vh;
+  }
   
   
   
   /****/
+  #container{
+     
+      max-width:1280px;
+      overflow:hidden;
+  }
  
   span{
       display: inline;
@@ -91,7 +98,7 @@
  
   .headerNotas{
       width:100%;
-      height: 10vh;
+      height: 100px;
       background-color: #006699;
       display: flex;
       justify-content: flex-start;
@@ -99,6 +106,9 @@
       
       
   }
+
+
+
   .circulo-box{
       
       display: flex;
@@ -114,15 +124,39 @@
       text-align: center;
       margin: 5px;
   }
-  
+  .circulo-box button{
+      border:none;
+      background:none;
+      font-size: 20px;
+      font-weight: 900;
+      color: #fff
+      
+  }
   input[type="number"]{
       width: 70px;
   }
-  
-  input[type="text"]{
-      width: 300px;
+
+  .inputNome{
+      width:300px;
   }
+
+  .inputNum{
+      width:70px;
+  }
+
   
+  .select, .nota{
+      width: 70px;
+      top:-35px;
+      position: relative;
+  }
+  .select{
+      margin-left: 2.5px;
+      
+  }
+  .nota{
+      margin:3px;
+  }
   input{
       font-weight: 700;
       font-size: 16px;
@@ -145,9 +179,41 @@
   /*área do Moisés fingindo que sabe css*/
 
   .Selecionado {
-    color : black;
+    background-color : #0cc;
   }
 
   .NotSelecionado {
-    color : red;
+    background:none;
   }
+
+
+/*****/
+
+.buttonEnviar{
+    position:relative;
+    top: -40px;
+}
+
+#addTable, .table-remove{
+    
+
+}
+
+
+.recebeDisc{
+    display: flex;
+    text-align: center;
+    
+}
+.disciplina{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
+    height:30px;
+    width: 100px;
+    border: #00CCCC 2px solid;
+    border-radius: 25px;
+    color: #036;
+    font-weight: 700
+}
