--- a/css/cssOperacaoInst/style480.css
+++ b/css/cssOperacaoInst/style480.css
@@ -3,8 +3,7 @@
     width: 100vw;
     height: 60px;
   }
-  
-  html {overflow: hidden;}
+
 
   .logo {
     width: 2.5em;
@@ -65,12 +64,14 @@
   
   
   
-  main {
-    width: 100vw;
-    min-height: 100vh;
-    padding: 70px 20px 0;
-    background: #F7FDFD; /*ou FAFEFE*/
-  }
+ 
+main {
+  position: absolute;
+  width: 100vw;
+  min-height: 100vh;
+  padding: 80px 20px 0;
+  background: #F7FDFD; /*ou FAFEFE*/
+}
   
   .greetings {
     width: 100%;
@@ -236,4 +237,25 @@ text-decoration: underline;
 
 .endUnid p{
     font-size: 24px;
+}
+
+form input[type='text']{
+    margin-bottom: 10px;
+    height: 30px;
+    width: 300px;
+    border:none;
+    border-bottom: 2px solid #000;
+    border-radius: 5px;
+    background:none;
+    font-size: 12px;
+}
+form{
+    text-align: left;
+    margin-top: 5%;
+}
+form label{
+    text-align: left;
+    font-weight: 600;
+    color: #036;
+    font-size: 16px;
 }
