--- a/css/cssOperacaoInst/style768.css
+++ b/css/cssOperacaoInst/style768.css
@@ -245,3 +245,24 @@ text-decoration: underline;
 .endUnid p{
     font-size: 34px;
 }
+
+form input[type='text']{
+    margin-bottom: 10px;
+    height: 30px;
+    width: 700px;
+    border:none;
+    border-bottom: 2px solid #000;
+    border-radius: 5px;
+    background:none;
+    font-size: 14px;
+}
+form{
+    text-align: left;
+    margin-top: 5%;
+}
+form label{
+    text-align: left;
+    font-weight: 600;
+    color: #036;
+    font-size: 20px;
+}
