--- a/css/cssOperacaoCurso/style480.css
+++ b/css/cssOperacaoCurso/style480.css
@@ -200,6 +200,7 @@ table{
   width:100%;
   table-layout: fixed;
   text-decoration: none;
+  
 }
 
 main th{
@@ -228,3 +229,11 @@ font-weight: bold;
 text-decoration: underline;
 }
 
+.alunos{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow-x: scroll;
+  overflow-y: hidden;
+
+}
