--- a/css/chamada-ocorrencia/Cad_ocorrencia1366.css
+++ b/css/chamada-ocorrencia/Cad_ocorrencia1366.css
@@ -1,71 +1,129 @@
-.header {
-    width: calc(100% - 280px);
-    height: 7vh;
-  
-  }
-  
-  .logo {
-    position: relative;
-    left: calc(100% - (-15em));
-    top: 5px;
-    width: 2em;
-    height: 2em;
-  }
-  
-  .header .st0{fill:#fff;}
-  .header .st1{fill:#fff;}
-  .header .st2{fill:#fff;}
-  .header .st3{fill:#fff;}
-  
-  .hamburger{display: none!important;}
-  
-  .fullnav {
-    width: 280px;
-    bottom: 0%;
-    top: 0%;
-    right: 0;
-    background: rgba(0,204,204,1);
-    background: linear-gradient(to bottom, rgba(0,204,204,1) 0%, rgba(0,204,204,1) 30%, rgba(0,102,204,1) 100%);
-  }
-  
-  .menu {
-    width: 230px;
-    justify-content: space-around;
-    background: #051523;
-  }
-  
-  hr {display: none; border: none;}
-  
-  .menu-buttons {
-    margin-top: calc(60px + 5vh);
-    flex-grow: 2;
-    align-items: flex-end!important;
-    position: relative;
-    right: -57px
-  }
-  
-  .menu-buttons li a{
-    font-size: 1em;
-    display:flex;
-    flex-direction: row-reverse;
-    align-items:center;
-  }
-  
-  .menu-buttons i {
-    font-size: 1.3em;
-    margin-left: 60px
-  }
-  
-  .title, .subtitle {font-size: 1em;}
-  
-  .title {font-size: 1em}
-  
-  .profile-photo-menu {
-    width: 120px;
-    height: 120px;
-    border-radius: 60px;
-    margin: calc(30px + 3vh) 0 30px;
-  }
+.header { background-color: transparent;
+  width: calc(100% - 280px);
+  height: 7vh;
+}
+
+.logo {
+  position: relative;
+  left: calc(100% - (-15em));
+  top: 5px;
+  width: 2em;
+  height: 2em;
+}
+
+.header .st0{fill:#fff;}
+.header .st1{fill:#fff;}
+.header .st2{fill:#fff;}
+.header .st3{fill:#fff;}
+
+.hamburger{display: none!important;}
+
+.fullnav {
+  width: 280px;
+  bottom: 0%;
+  top: 0%;
+  right: 0;
+  background: rgba(0,204,204,1);
+  background: linear-gradient(to bottom, rgba(0,204,204,1) 0%, rgba(0,204,204,1) 30%, rgba(0,102,204,1) 100%);
+}
+
+.menu {
+  width: 230px;
+  justify-content: space-around;
+  background: #051523;
+}
+
+hr {display: none; border: none;}
+
+.menu-buttons {
+  margin-top: calc(60px + 5vh);
+  flex-grow: 2;
+  align-items: flex-end!important;
+  position: relative;
+  left: 25px;
+  width: 280px;
+}
+
+.menu-buttons li{padding: 10px; width: 100%}
+
+.menu-buttons li:hover{background: linear-gradient(to right, rgba(246, 246, 246, 0) 0%, rgba(255, 255, 255, 0.596) 100%);}
+
+
+.menu-buttons li a{
+  font-size: 1em;
+  display:flex;
+  flex-direction: row-reverse;
+  align-items:center;
+}
+
+.menu-buttons i {
+  font-size: 1.3em;
+  margin-left: 60px
+}
+
+.title, .subtitle {font-size: 1em;}
+
+.title {font-size: 1em}
+
+.profile-photo-menu {
+  width: 120px;
+  height: 120px;
+  border-radius: 60px;
+  margin: calc(30px + 3vh) 0 30px;
+}
+
+main {background-color: #f1f1f1; width: 100vw; height: 100vh; }
+
+#pagina{
+  /*  width:79.3%;*/
+   /* margin-right:18.5%*/
+   position: relative;
+   width: calc(100% - 280px);
+}
+
+/**********/
+
+.banner {
+
+  width: 100%;
+  height: 150px;/*
+  padding-top:60px;*/
+
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #003366;
+  color: white
+}
+
+h2, h1 {
+  font-size: 1.4em;
+  margin: 7px;
+}
+
+h2 {
+  font-weight: bold;
+  display:none
+}
+h1{
+  font-size:2em;
+}
+h3{
+    font-style: italic;
+    font-size:0.8em;
+
+}
+
+.profile-photo {
+  width: 70px;
+  height: 70px;
+  border-radius: 60px;
+  background-color: #0cc;
+  flex-shrink: 0;
+  display:none;
+}
+
   
   main {background-color: #f1f1f1; width: 100vw; height: 100vh; }
 
