--- a/css/chamada-ocorrencia/chamada_ocorrencia1366.css
+++ b/css/chamada-ocorrencia/chamada_ocorrencia1366.css
@@ -1,7 +1,6 @@
-.header {
+.header { background-color: transparent;
   width: calc(100% - 280px);
   height: 7vh;
-
 }
 
 .logo {
@@ -41,8 +40,14 @@ hr {display: none; border: none;}
   flex-grow: 2;
   align-items: flex-end!important;
   position: relative;
-  right: -57px
+  left: 25px;
+  width: 280px;
 }
+
+.menu-buttons li{padding: 10px; width: 100%}
+
+.menu-buttons li:hover{background: linear-gradient(to right, rgba(246, 246, 246, 0) 0%, rgba(255, 255, 255, 0.596) 100%);}
+
 
 .menu-buttons li a{
   font-size: 1em;
@@ -66,6 +71,59 @@ hr {display: none; border: none;}
   border-radius: 60px;
   margin: calc(30px + 3vh) 0 30px;
 }
+
+main {background-color: #f1f1f1; width: 100vw; height: 100vh; }
+
+#pagina{
+  /*  width:79.3%;*/
+   /* margin-right:18.5%*/
+   position: relative;
+   width: calc(100% - 280px);
+}
+
+/**********/
+
+.banner {
+
+  width: 100%;
+  height: 150px;/*
+  padding-top:60px;*/
+
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #003366;
+  color: white
+}
+
+h2, h1 {
+  font-size: 1.4em;
+  margin: 7px;
+}
+
+h2 {
+  font-weight: bold;
+  display:none
+}
+h1{
+  font-size:2em;
+}
+h3{
+    font-style: italic;
+    font-size:0.8em;
+
+}
+
+.profile-photo {
+  width: 70px;
+  height: 70px;
+  border-radius: 60px;
+  background-color: #0cc;
+  flex-shrink: 0;
+  display:none;
+}
+
 
 main {background-color: #f1f1f1; width: 100vw; height: 100vh; }
 
