--- a/css/cssOperacaoCurso/style1366.css
+++ b/css/cssOperacaoCurso/style1366.css
@@ -1,7 +1,11 @@
+.header { background-color: transparent;
+  width: calc(100% - 280px);
+  height: 7vh;
+}
 
 .logo {
   position: relative;
-  left: calc(100vw - 2em - 8px);
+  left: calc(100% - (-15em));
   top: 5px;
   width: 2em;
   height: 2em;
@@ -36,18 +40,14 @@ hr {display: none; border: none;}
   flex-grow: 2;
   align-items: flex-end!important;
   position: relative;
-  right: -57px
+  left: 25px;
+  width: 280px;
 }
 
 .menu-buttons li{padding: 10px; width: 100%}
 
-.menu-buttons .atual{
-  background: linear-gradient(to right, rgba(246, 246, 246, 0) 0%, rgba(255, 255, 255, 0.596) 100%); 
-  border-right: solid 5px white; 
-  padding-right: 5px;
-}
-
 .menu-buttons li:hover{background: linear-gradient(to right, rgba(246, 246, 246, 0) 0%, rgba(255, 255, 255, 0.596) 100%);}
+
 
 .menu-buttons li a{
   font-size: 1em;
